# libshell_example

./: .gitignore  README.md  common.py  runSimulation.py  viewSimulation.py
cpplib/libshell/: CMakeLists.txt  README.md
cpplib/libshell/cli/: CLI11.hpp  DynamicSolver.h  Projection.cpp  Projection.h  README.md  ShellIO.h  common.h  main.cpp
cpplib/libshell/cmake/: FindLIBIGL.cmake
cpplib/libshell/example/rotatedRibbon/: edgedofs_simulated.txt  ribbon_clampedDOFs.txt  ribbon_elastic.json  ribbon_elastic_cur.json  ribbon_external_force.txt  ribbon_vel_current.txt  vel_simulated.txt
cpplib/libshell/viewer/: README.md  main.cpp
